config/mcp-system/deployment-controller-redis-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-broker-router
  namespace: mcp-system
spec:
  template:
    spec:
      containers:
        - name: mcp-broker-router
          command:
            - ./mcp_gateway
            - --mcp-gateway-config=/config/config.yaml
            - --mcp-broker-public-address=0.0.0.0:8080
            - --mcp-broker-config-address=0.0.0.0:8181
            - --mcp-gateway-public-host=mcp.127-0-0-1.sslip.io
            - --mcp-router-address=0.0.0.0:50051
            - --log-level=-4
            - --cache-connection-string=redis://redis.mcp-system.svc.cluster.local:6379
