config/mcp-system/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: mcp-gateway
  name: mcp-gateway
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mcp-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mcp-gateway
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: mcp-gateway-config
      containers:
        - image: quay.io/maleck13/mcp-gateway:latest
          imagePullPolicy: Always
          name: mcp-gateway
          volumeMounts:
            - name: config-volume
              mountPath: /config
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 50051
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
