config/mcp-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mcp-gateway
  name: mcp-gateway
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: 50051
  selector:
    app: mcp-gateway
  sessionAffinity: None
  type: ClusterIP
